# uv-example-projects

./: README.md
.devcontainer/: devcontainer.json
example-app/: main.py  pyproject.toml
example-bare/: main.py  pyproject.toml
example-lib/: pyproject.toml
example-lib/src/example_lib/: __init__.py
example-pkg/: pyproject.toml
example-script/: main.py
