[project]
name = "example-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Weidav", email = "66092635+Weidav@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cowsay>=6.1",
]

[project.scripts]
example-pkg = "example_pkg:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
